--- a/courses/current_courses/b705/b705_week_1/b705_week_1.qmd
+++ b/courses/current_courses/b705/b705_week_1/b705_week_1.qmd
@@ -32,7 +32,10 @@ execute:
 ### Thursday
 
 
+#### Linear Regression Review
 
+* Simple linear regression model:
+    - $Y = \beta_0 + \beta_1 X + \epsilon$
 
 
 
