--- a/courses/current_courses/b705/b705_week_2/b705_week_2.qmd
+++ b/courses/current_courses/b705/b705_week_2/b705_week_2.qmd
@@ -131,5 +131,46 @@ print(summary(fitB))
 
 
 
+### Thursday
+
+* The MSE is the best estimator of the variance of the distribution of error terms
+
+* $t$ will always be equal to $F$ as long as the degrees of freedom in the number of $F$ is 1. This is the same thing as stating that we're only testing one parameter with an $F$ distribution if the degrees of freedom in the numator are 1. 
+    - The degrees of freedom in the denominator is equal to $n - \text{# of parameters in model}$
+    - I believe this will be equal to $n - 1 - \text{ # of degrees of freedom in numerator}$
+* When we have an $R^2$ value of .7, this is essentially saying that 70% of the variability in the data can be explained by $X$. 
+* Remember: the whole idea of statistics is to minimize variability
+* I'm not sure if this is true if the degrees of freedom in F's numerator is larger than 1, but the F-statistic is equal to MSE/SSR. It's something similar for more than 1 parameter in numerator (larger than 1 degree of freedom), but the terms are confusing to me right now. I need to study this a little more
+    - I believe that it's actually the MSR and MSE. I think these are slightly different from SSR and SSE in that the MSE is the SSE / # degrees of freedom in F's numerator and MSR is the SSR / # of degrees of freedom in the SSE
+* In the equation $SSE = SSR + SSE$, $SSt$ is independent of the model. $SSR$ and $SSE$ are dependent on the model
+    - Reminder: $R^2 = \frac{SSR}{SST} = 1 - \frac{SSE}{SST}$
+    - $R^2_a = 1 - \frac{SSE/(n-2)}{SST/(n-1)}$
+* $S^2Y$ is the variance in the data. $S^2Y.X$ is the variance of the model
+* If there is no predictor in the model, $\beta_0 = \hat{y_i} = \bar{Y}$
+* Degrees of freedom in model:
+    - SST df: n - 1
+    - SSE df: n - # of parameters
+    - SSR df: # of predictors
+
+
+```{r}
+
+fitC <- lm(SBP ~ ., data = df)
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 :::
